# temporal-sdk-go

./: .gitignore  .gitmodules
internal/: client.go  grpc_dialer.go  sdkcore_support.go
sdkcore/: README.md  client.go  example_test.go  log_simple.go  util.go  worker.go  worker_workflow.go
sdkcore/internal/ffi/: README.md  ffi.go  ffi_test.go
sdkcore/internal/ffi/corepb/: core_interface.pb.go
sdkcore/internal/ffi/corepb/activityresultpb/: activity_result.pb.go
sdkcore/internal/ffi/corepb/activitytaskpb/: activity_task.pb.go
sdkcore/internal/ffi/corepb/childworkflowpb/: child_workflow.pb.go
sdkcore/internal/ffi/corepb/commonpb/: common.pb.go
sdkcore/internal/ffi/corepb/workflowactivationpb/: workflow_activation.pb.go
sdkcore/internal/ffi/corepb/workflowcommandspb/: workflow_commands.pb.go
sdkcore/internal/ffi/corepb/workflowcompletionpb/: workflow_completion.pb.go
sdkcore/internal/ffi/sdk-core-bridge/: Cargo.toml  README.md  build.go  build.rs
sdkcore/internal/ffi/sdk-core-bridge/lib/include/: sdk-core-bridge.h
sdkcore/internal/ffi/sdk-core-bridge/src/: lib.rs
