[package]
name = "temporal-sdk-core-bridge"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "~0.2"
temporal-sdk-core = { version = "0.1.0-alpha.1", path = "../sdk-core" }

[build-dependencies]
cbindgen = "0.20.0"
